[metadata]
# replace with your username:
name = synapse_mediacheck-Telegraphenbauanstalt
version = 0.0.9
author = Telegraphenbauanstalt
#author_email = author@example.com
description = Spam Checker for Synapse Matrix Server, checks Media Files for content-type
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Telegraphenbauanstalt/ynapse_mediacheck
classifiers =
    Programming Language :: Python :: 3
    License :: TBD 
    Operating System :: OS Independent
# see: https://pypi.org/classifiers/

[options]
packages = find:
python_requires = >=3.6
